[package]
name = "redisgeo-bench"
version = "0.1.0"
authors = ["Deepti Raghavan <deeptir@cs.stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
tracing = "*"
tracing-subscriber = "0.2.17"
structopt="0.2.16"
structopt-derive="0.2.16"
redis = { version = "0.20.0", features = ["geospatial"] }
core_affinity = "0.5.10"
rand = "0.8.3"
